test/integration/bad/lang/bad_bounds4.stan
data {
  complex<lower=1, upper=5> x;
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}
